--- a/Introducción/about.html
+++ b/Introducción/about.html
@@ -21,6 +21,7 @@
                         <a href="mailto:angelicasalaicesarriola@gmail.com">Contacto</a>
                         <a href="./about.html">About us</a>
                         <a href="./about.html#historia">Historia</a>
+                    
                     </h1>
 
                     </td>
@@ -35,7 +36,7 @@
                         <a href="#">Hola</a>
                     </td>
                     <td>
-                        <h2>The Facebook</h2>
+                        <h2>About us</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error, corporis, nihil autem
                              nam pariatur cumque dicta nesciunt hic mollitia cum aspernatur, vitae inven
                             tore vero ea non a quos aliquam sint.
@@ -65,7 +66,6 @@
                         <div style="height: 500px;">division 2</div>
                         <div id="historia" style="height: 500px;">
                             <h1>Historia</h1>
-                        </div>
                     </td>
                 </tr>
             </tbody>
