--- a/coffee/index.html
+++ b/coffee/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./css/estilos.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/mediaquerys.css">
 </head>
 <body>
     <header>
